kube/services/netpolicy/arranger_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-arranger
spec:
  podSelector:
    matchLabels:
      app: arranger
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: arranger
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: arranger
      - podSelector:
          matchLabels:
            app: arborist
      - podSelector:
          matchLabels:
            app: esproxy
  policyTypes:
   - Ingress
   - Egress
